force-app/main/default/objects/deppObj__c/deppObj__c.object-meta.xml
<CustomObject>
    <label>deppObj</label>
    <nameField>
        <label>deppObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>deppObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>