force-app/main/default/objects/deppObj__c/fields/formoola__c.field-meta.xml
<CustomField>
    <fullName>formoola__c</fullName>
    <formula>$Organization.Latitude +  $Organization.Longitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formoola</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>