force-app/main/default/objects/deppObj__c/fields/MCQ__c.field-meta.xml
<CustomField>
    <fullName>MCQ__c</fullName>
    <label>MCQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>