force-app/main/default/objects/deppObj__c/fields/NewMail__c.field-meta.xml
<CustomField>
    <fullName>NewMail__c</fullName>
    <label>NewMail</label>
    <type>Email</type>
</CustomField>